# hygieia

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  README.md  TECHNICAL_DESIGN.md  dev  docker-compose.yml
backend/: config.py  main.py  oura_client.py  pyproject.toml  utils.py
backend/models/: health_models.py
backend/services/: data_processor.py  health_analyzer.py  oura_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/ai-trainer/: ai_trainer_page.tsx  page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/upload/: page.tsx
